find_package(Qt6 QUIET COMPONENTS Test)

if (Qt6Test_FOUND)
	message("Qt6Test found")
	include_directories(${Qt6Test_INCLUDE_DIRS})
	add_definitions(${Qt6Test_DEFINITIONS})
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt6Test_EXECUTABLE_COMPILE_FLAGS}")
	set(TEST_LIBRARIES ${Qt6Test_LIBRARIES})
else()
	find_package(Qt5 REQUIRED COMPONENTS Test)
	if (Qt5Test_FOUND)
		message("Qt5Test found")
		include_directories(${Qt5Test_INCLUDE_DIRS})
		add_definitions(${Qt5Test_DEFINITIONS})
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Test_EXECUTABLE_COMPILE_FLAGS}")
		set(TEST_LIBRARIES ${Qt5Test_LIBRARIES})
	else()
		message(FATAL_ERROR "Qt5 or Qt6 Test not found")
	endif()
endif()

set(TEST_SUBDIRS pack unpack mixed stream qttypes)

foreach(subdir ${TEST_SUBDIRS})
	add_subdirectory(${subdir})
endforeach()
